# VeloxMR

./: .travis.yml  Makefile  Makefile.am  Makefile_VeloxMR.am  README.md  __velox_mapreduce  autogen.sh  configure.ac  eclipse_node  libtool  set-env.sh  tmp.cc  veloxdfs
.libs/: __velox_mapreduce  libvdfs.so.0  veloxdfs
VeloxDFS/: Makefile  eclipse_node  velox_get_config  veloxdfs
VeloxDFS/.libs/: eclipse_node  veloxdfs
VeloxDFS/src/client/: dfs.cc
VeloxDFS/src/targets/: veloxd
data/: kmeans.input  point_generator.ruby
doc/: eclipse.json
src/blocknode/: local_io.cc
src/client/: dfs.cc  vdfs.cc  veloxmr.in  veloxmr_lib.py  vmr.cc  vmr.hh
src/common/: context.cc  context_singleton.hh  dl_loader.cc  dl_loader.hh  dl_loader_memc.cc  dl_loader_memc.hh  dl_loader_ori.cc  histogram.cc  logger.cc  logger.hh  node_identifier.hh
src/fileleader/: directory.cc  directory.hh  file_leader.cc
src/fs/: dfs.cc  dfs.hh  directory.cc  directory.hh  directorymr.cc  directorymr.hh  ireader.cc  ireader.h  iwriter.cc  iwriter.h
src/mapreduce/: dataset.cc  dataset.hh  demoExecutor.cc  dl_loader.cc  dl_loader.hh  executor.cc  executor.hh  executor_basic.cc  executor_memc.cc  isender.cc  isender.h  map_output_collection.cc  map_output_collection.hh  output_collection.cc  output_collection.hh  peermr.cc  peermr.hh  py_executor.cc  py_executor.hh  remotemr.cc  remotemr.hh  task_cxx.cc  task_cxx.hh  task_cxx_memc.cc  task_cxx_memc.hh  task_cxx_ori.cc  task_cxx_ori.hh  task_executor.cc  task_executor.hh  task_executor_memc.cc  task_executor_ori.cc  task_executor_router.cc  task_executor_router.hh  task_handler.cc  task_handler.hh  task_handler_memc.hh  task_python.cc  task_python.hh
src/mapreduce/fs/: directorymr.cc  directorymr.hh  ireader.cc  ireader.h  ireader_interface.hh  iwriter.cc  iwriter.h  iwriter_interface.hh
src/mapreduce/messages/: boost_impl.cc  boost_impl.hh  boost_impl_mr.cc  boost_impl_mr.hh  finish_shuffle.cc  finish_shuffle.h  finishmap.hh  iblockinfo.hh  iblockinforequest.cc  iblockinforequest.hh  iblockinsert.hh  idatainfo.hh  idatainforequest.hh  idatainsert.hh  idatakeys.hh  idatalist.cc  idatalist.hh  igroupinfo.hh  igroupinforequest.hh  igroupinsert.hh  job.cc  job.hh  jobstatus.hh  key_value_shuffle.cc  key_value_shuffle.h  kv_block.cc  kv_block.h  nodes_shuffling.cc  nodes_shuffling.hh  task.cc  task.hh  taskstatus.cc  taskstatus.hh
src/mapreduce/nodes/: peermr.cc  peermr.h  remotemr.cc  remotemr.h
src/messages/: boost_impl.cc  boost_impl.hh  boost_impl_mr.cc  boost_impl_mr.hh  factory.cc  fileidata.cc  fileidata.hh  fileinfo.hh  finishmap.cc  finishmap.hh  iblockinforequest.hh  iblockinsert.cc  iblockinsert.hh  idatainforequest.cc  idatainforequest.hh  idatainsert.cc  idatainsert.hh  idatakeys.cc  idatakeys.hh  idatalist.hh  igroupinforequest.cc  igroupinforequest.hh  igroupinsert.cc  igroupinsert.hh  job.hh  jobstatus.cc  jobstatus.hh  message.hh  nodes_shuffling.hh  subjob.cc  subjob.hh  subjobstatus.cc  subjobstatus.hh  task.cc  task.hh  taskstatus.hh
src/network/: asyncchannel.cc  asyncchannel.hh  client_handler.cc  server_handler.cc
src/nodes/: directory.cc  directory.hh  local_io.cc  peerdfs.cc  peerdfs.hh  peermr.cc  peermr.h  peermr.hh  remotedfs.cc  remotedfs.hh  remotemr.cc  remotemr.h  remotemr.hh  router.cc
src/targets/: kmeans.cc  node_main_mr.cc  sample_app.cc  velox-compile  velox-submit  veloxmr_mapreduce.cc  wc.cc
tests/: Makefile.am
